# bevy_snake

./: Cargo.toml
src/: constants.rs  main.rs
src/comp/: mod.rs  snake.rs
src/plugins/game_state/: events.rs  mod.rs  res.rs  sys.rs
