[package]
name = "bevy_snake"
version = "0.1.0"
authors = ["Justin Miller <justin.miller.dev@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.1.3"
rand = "0.7.3"
serde = { version = "1", features = ["derive"]}